tests/rosetta/out/C/base64-decode-data.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:52Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:52Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  char *key;
  int value;
} pair_string_int;
static pair_string_int pair_string_int_new(char *key, int value) {
  pair_string_int p;
  p.key = key;
  p.value = value;
  return p;
}
typedef struct {
  int len;
  int cap;
  pair_string_int *data;
} map_string_int;
static map_string_int map_string_int_create(int cap) {
  map_string_int m;
  m.len = 0;
  m.cap = cap;
  m.data = cap ? calloc(cap, sizeof(pair_string_int)) : NULL;
  if (cap && !m.data) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return m;
}
static void map_string_int_put(map_string_int *m, char *k, int v) {
  for (int i = 0; i < m->len; i++)
    if (strcmp(m->data[i].key, k) == 0) {
      m->data[i].value = v;
      return;
    }
  if (m->len >= m->cap) {
    m->cap = m->cap ? m->cap * 2 : 4;
    m->data =
        (pair_string_int *)realloc(m->data, sizeof(pair_string_int) * m->cap);
  }
  m->data[m->len++] = pair_string_int_new(k, v);
}
static int map_string_int_get(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return m.data[i].value;
  return 0;
}
static int map_string_int_contains(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return 1;
  return 0;
}
static int cmp_map_string_int(map_string_int a, map_string_int b) {
  int aa = map_string_int_get(a, "a");
  int ba = map_string_int_get(b, "a");
  if (aa != ba)
    return aa > ba ? 1 : -1;
  int ab = map_string_int_get(a, "b");
  int bb = map_string_int_get(b, "b");
  if (ab != bb)
    return ab > bb ? 1 : -1;
  return 0;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *_index_string(char *s, int i) {
  int len = strlen(s);
  if (i < 0)
    i += len;
  if (i < 0 || i >= len) {
    fprintf(stderr, "index out of range\n");
    exit(1);
  }
  char *buf = (char *)malloc(2);
  buf[0] = s[i];
  buf[1] = '\0';
  return buf;
}
static int index_of_string(char *s, char *sub) {
  char *pos = strstr(s, sub);
  if (!pos)
    return -1;
  return pos - s;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
static char *msg = "Rosetta Code Base64 decode data task";

int indexOf(char *s, char *ch) {
  int i = 0;
  while (i < strlen(s)) {
    char *tmp1 = _index_string(s, i);
    if ((strcmp(tmp1, ch) == 0)) {
      return i;
    }
    i = i + 1;
  }
  return (-1);
}

int parseIntStr(char *str) {
  int i = 0;
  int neg = 0;
  char *tmp2 = _index_string(str, 0);
  if ((str.len > 0 && tmp2 == "-")) {
    neg = 1;
    i = 1;
  }
  int n = 0;
  map_string_int tmp3 = map_string_int_create(10);
  map_string_int_put(&tmp3, "0", 0);
  map_string_int_put(&tmp3, "1", 1);
  map_string_int_put(&tmp3, "2", 2);
  map_string_int_put(&tmp3, "3", 3);
  map_string_int_put(&tmp3, "4", 4);
  map_string_int_put(&tmp3, "5", 5);
  map_string_int_put(&tmp3, "6", 6);
  map_string_int_put(&tmp3, "7", 7);
  map_string_int_put(&tmp3, "8", 8);
  map_string_int_put(&tmp3, "9", 9);
  map_string_int digits = tmp3;
  while ((i < str.len)) {
    char *tmp4 = _index_string(str, i);
    n = n * 10 + map_string_int_get(digits, tmp4);
    i = i + 1;
  }
  if (neg) {
    n = (-n);
  }
  return n;
}

int ord(char *ch) {
  char *upper = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
  char *lower = "abcdefghijklmnopqrstuvwxyz";
  int idx = index_of_string(upper, ch);
  if ((idx >= 0)) {
    return 65 + idx;
  }
  idx = index_of_string(lower, ch);
  if ((idx >= 0)) {
    return 97 + idx;
  }
  if ((strcmp(ch, "0") >= 0) && ch <= "9") {
    return 48 + parseIntStr(ch);
  }
  if ((strcmp(ch, "+") == 0)) {
    return 43;
  }
  if ((strcmp(ch, "/") == 0)) {
    return 47;
  }
  if ((strcmp(ch, " ") == 0)) {
    return 32;
  }
  if ((strcmp(ch, "=") == 0)) {
    return 61;
  }
  return 0;
}

char *chr(int n) {
  char *upper = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
  char *lower = "abcdefghijklmnopqrstuvwxyz";
  if (n >= 65 && n < 91) {
    char *tmp5 = slice_string(upper, n - 65, n - 64);
    return tmp5;
  }
  if (n >= 97 && n < 123) {
    char *tmp6 = slice_string(lower, n - 97, n - 96);
    return tmp6;
  }
  if (n >= 48 && n < 58) {
    char *digits = "0123456789";
    char *tmp7 = slice_string(digits, n - 48, n - 47);
    return tmp7;
  }
  if (n == 43) {
    return "+";
  }
  if (n == 47) {
    return "/";
  }
  if (n == 32) {
    return " ";
  }
  if (n == 61) {
    return "=";
  }
  return "?";
}

char *toBinary(int n, int bits) {
  char *b = "";
  int val = n;
  int i = 0;
  while (i < bits) {
    char *tmp8 = _str(val % 2);
    char *tmp9 = concat_string(tmp8, b);
    b = tmp9;
    val = (int)((((double)val) / ((double)2)));
    i = i + 1;
  }
  return b;
}

int binToInt(char *bits) {
  int n = 0;
  int i = 0;
  while (i < strlen(bits)) {
    char *tmp10 = slice_string(bits, i, i + 1);
    n = n * 2 + parseIntStr(tmp10);
    i = i + 1;
  }
  return n;
}

char *base64Encode(char *text) {
  char *alphabet =
      "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/";
  char *bin = "";
  for (int tmp11 = 0; text[tmp11] != '\0'; tmp11++) {
    char ch[2];
    ch[0] = text[tmp11];
    ch[1] = '\0';
    bin = bin + toBinary(ord(ch), 8);
  }
  while (strlen(bin) % 6 != 0) {
    char *tmp12 = concat_string(bin, "0");
    bin = tmp12;
  }
  char *out = "";
  int i = 0;
  while (i < strlen(bin)) {
    char *tmp13 = slice_string(bin, i, i + 6);
    char *chunk = tmp13;
    int val = binToInt(chunk);
    char *tmp14 = slice_string(alphabet, val, val + 1);
    char *tmp15 = concat_string(out, tmp14);
    out = tmp15;
    i = i + 6;
  }
  int pad = (3 - (strlen(text) % 3)) % 3;
  if (pad == 1) {
    char *tmp16 = slice_string(out, 0, strlen(out) - 1);
    char *tmp17 = concat_string(tmp16, "=");
    out = tmp17;
  }
  if (pad == 2) {
    char *tmp18 = slice_string(out, 0, strlen(out) - 2);
    char *tmp19 = concat_string(tmp18, "==");
    out = tmp19;
  }
  return out;
}

char *base64Decode(char *enc) {
  char *alphabet =
      "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/";
  char *bin = "";
  int i = 0;
  while (i < strlen(enc)) {
    char *tmp20 = _index_string(enc, i);
    char *ch = tmp20;
    if ((strcmp(ch, "=") == 0)) {
      break;
    }
    int idx = index_of_string(alphabet, ch);
    bin = bin + toBinary(idx, 6);
    i = i + 1;
  }
  char *out = "";
  i = 0;
  while (i + 8 <= strlen(bin)) {
    char *tmp21 = slice_string(bin, i, i + 8);
    char *chunk = tmp21;
    int val = binToInt(chunk);
    out = out + chr(val);
    i = i + 8;
  }
  return out;
}

int _mochi_main() {
  char *tmp22 = concat_string("Original : ", msg);
  printf("%s\n", tmp22);
  char *enc = base64Encode(msg);
  char *tmp23 = concat_string("\nEncoded  : ", enc);
  printf("%s\n", tmp23);
  char *dec = base64Decode(enc);
  char *tmp24 = concat_string("\nDecoded  : ", dec);
  printf("%s\n", tmp24);
  return 0;
}
int main() { return _mochi_main(); }
